--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,14 +20,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/Theme.BaseAndroidViewDKTECH"
         tools:targetApi="31">
         <activity
             android:name=".ui.splash_screen.SplashScreenActivity"
             android:configChanges="uiMode|orientation"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,6 +34,11 @@
         </activity>
         <activity
             android:name=".ui.home.MainActivity"
+            android:configChanges="uiMode|orientation"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.select_mode_screen.SelectModeActivity"
             android:configChanges="uiMode|orientation"
             android:exported="true"
             android:screenOrientation="portrait" />
@@ -39,6 +51,11 @@
         <activity
             android:name=".ui.how_to_use_screen.HowToUseActivity"
             android:configChanges="uiMode|orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.camera.TraceDrawActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="false"
             android:screenOrientation="portrait" />
 
         <meta-data
